[package]
name = "ckb_rpc"
version = "0.1.0"
authors = ["sun <huachuang20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surf = "1"
