[package]
name = "mock"
version = "0.1.0"
authors = ["SECBIT Labs"]
edition = "2018"

# [[bin]]
# path = "src/user.rs"
# name = "mock-user"

[[bin]]
path = "src/contract.rs"
name = "mock-ckb"

[dependencies]
tide = "0.13"
async-std = { version = "1", features = ["attributes"] }
ckb-zkp = { git="https://github.com/sec-bit/ckb-zkp", branch = "develop-asvc" }
ckb-tool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
ckb-testtool = { git = "https://github.com/jjyr/ckb-tool.git", tag = "v0.1.2" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
