[package]
name = "rollup"
version = "0.1.0"
authors = ["SECBIT Labs"]
edition = "2018"

[[bin]]
path = "src/asvc/server.rs"
name = "rollup"

[[bin]]
path = "src/merkletree/server.rs"
name = "rollup-merkletree"

[[bin]]
path = "src/test.rs"
name = "test"

[dependencies]
ckb-zkp = { git="https://github.com/sec-bit/ckb-zkp", branch = "develop-asvc" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.34.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.13"
async-std = { version = "1", features = ["attributes"] }
surf = "1"
