[package]
name = "rollup"
version = "0.1.0"
authors = ["SECBIT Labs"]
edition = "2018"

[[bin]]
path = "src/asvc/server.rs"
name = "rollup"

[[bin]]
path = "src/merkletree/server.rs"
name = "rollup-merkletree"

[dependencies]
ckb-zkp = { git = "https://github.com/sec-bit/ckb-zkp", branch = "develop-asvc", default-features = false, features = ["asvc", "bn_256"] }
#ckb-zkp = { path = "../../ckb-zkp", branch = "develop-asvc", default-features = false, features = ["asvc", "bn_256"] }
asvc_rollup = { path = "../asvc_rollup" }
ckb_rpc = { path = "../ckb_rpc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tide = "0.13"
async-std = { version = "1", features = ["attributes"] }
rand = { version = "0.7" }
hex = "0.4"
ordermap =  { version = "0.4.2" }
